fix settings overflow scroll

--- a/frontend/beatscape/src/Components/Settings.css
+++ b/frontend/beatscape/src/Components/Settings.css
@@ -1,3 +1,13 @@
+.settings{
+    height: 100%; /* Let it fill available height */
+    max-height: 100%; /* Do not exceed the center panel's height */
+    overflow-y: scroll;
+    scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
 .settings-content{
     display: flex;
     flex-direction: column;
